Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Mileage Plus by thebizztech</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Mileage Plus : Easy way for truckers (or anyone) to track mileage from state to state" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Mileage Plus</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Mileage Plus</h1>
-        <p>Easy way for truckers (or anyone) to track mileage from state to state</p>
 
-        <p class="view"><a href="https://github.com/thebizztech/iphone-mileage-tracker">View the Project on GitHub <small>thebizztech/iphone-mileage-tracker</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/thebizztech/iphone-mileage-tracker">View on GitHub</a>
 
+          <h1 id="project_title">Mileage Plus</h1>
+          <h2 id="project_tagline">Easy way for truckers (or anyone) to track mileage from state to state</h2>
 
-        <ul>
-          <li><a href="https://github.com/thebizztech/iphone-mileage-tracker/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/thebizztech/iphone-mileage-tracker/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/thebizztech/iphone-mileage-tracker">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/thebizztech/iphone-mileage-tracker/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/thebizztech/iphone-mileage-tracker/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="mileage-tracker-by-jason-michels" class="anchor" href="#mileage-tracker-by-jason-michels"><span class="octicon octicon-link"></span></a>Mileage Tracker by Jason Michels</h1>
+
+<p>UPDATE: Brand new design based on your feedback. Thanks!  Entering states and mileage is now easier and is all on one screen instead of requiring multiple pages and multiple scrolling bars.</p>
+
+<p>Mileage Plus is a state mileage tracker built for semi-truck drivers, or for anyone who has to track how many miles they drive in a state.  </p>
+
+<p>When you open Mileage Plus for the first time you can enter the current state you are in along with your current mileage.  Every time you come back to the page you can enter the state you are driving into, along with your current mileage going into that state.</p>
+
+<p>After your mileage has been saved you can view your History of all the miles you drove per state.  Mileage is even broken down by quarter for easy tracking.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/thebizztech">thebizztech</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Mileage Plus maintained by <a href="https://github.com/thebizztech">thebizztech</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
