Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           <h1>
 <a id="mileage-tracker-by-jason-michels" class="anchor" href="#mileage-tracker-by-jason-michels" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mileage Tracker by Jason Michels</h1>
 
+<h3>
+<a id="important-this-code-is-no-longer-actively-maintained-and-the-app-does-not-exist-on-iphone-app-store-anymore" class="anchor" href="#important-this-code-is-no-longer-actively-maintained-and-the-app-does-not-exist-on-iphone-app-store-anymore" aria-hidden="true"><span class="octicon octicon-link"></span></a>IMPORTANT: This code is no longer actively maintained and the app does not exist on iPhone app store anymore.</h3>
+
 <p>Mileage Plus is a state mileage tracker built for semi-truck drivers, or for anyone who has to track how many miles they drive in a state.  </p>
 
 <p>When you open Mileage Plus for the first time you can enter the current state you are in along with your current mileage.  Every time you come back to the page you can enter the state you are driving into, along with your current mileage going into that state.</p>
@@ -55,6 +58,16 @@
       </div>
     </div>
 
-  
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-59048422-1");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
   </body>
 </html>
